--- a/style.css
+++ b/style.css
@@ -8,15 +8,22 @@ body {
   font-family: 'Times New Roman', Times, serif;
   text-transform: uppercase;
   margin: 0;
+  margin-top: 100px;
 }
 
 
 .designer {
   transform: rotate(-90deg);
+  font-size: 120px;
+  grid-row: 1 / span 2;
+  grid-column: 2 / span 3;
 }
 
 .coder {
   transform: rotate(-90deg);
+  font-size: 120px;
+  grid-row: 2 / span 3;
+  grid-column: 2 / span 3;
 }
 
 /* GRID */
@@ -24,42 +31,23 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* grid-auto-rows: minmax(100px, auto); */
+  grid-template-columns: 1fr 2.8fr 1fr;
+  grid-auto-rows: minmax(500px, auto);
   grid-gap: 0px;
 }
 
 .grid-img-d {
-  grid-column: 1;
-  grid-row: 2;
-  z-index: -1;
-}
- 
-/* .grid-img-k {
-  grid-column: 2 / span 3;
-  grid-row: 2;
-  grid-column: 2;
-  grid-row: 2;
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 2;
 }
 
-.grid-img-k-part {
-  grid-column: 2 / span 3;
-  grid-row: 2;
-  grid-column: 2;
-  grid-row: 2;
-  z-index: 1;
-} */
-
-.grid-container, .grid-img-k, .grid-img-k-part {
-  grid-row: 2;
-}
 .grid-img-k {
-  grid-column: 1;
-  grid-row: 3;
+  grid-row: 2 / span 3;
+  grid-column: 2 / span 3;
 }
 
 .grid-img-k-part {
-  grid-column: 1;
-  grid-row: 3;
+  grid-row: 2 / span 3;
+  grid-column: 2 / span 3;
 }
 
