--- a/style.css
+++ b/style.css
@@ -12,27 +12,15 @@ body {
 }
 
 
-.designer {
-  transform: rotate(-90deg);
-  font-size: 120px;
-  grid-row: 1 / span 2;
-  grid-column: 2 / span 3;
-}
 
-.coder {
-  transform: rotate(-90deg);
-  font-size: 120px;
-  grid-row: 2 / span 3;
-  grid-column: 2 / span 3;
-}
 
 /* GRID */
 
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 2.8fr 1fr;
-  grid-auto-rows: minmax(500px, auto);
+  grid-template-columns: 8fr 111fr 8fr 8fr 8fr 8fr 8fr 8fr 8fr 8fr 8fr 8fr;
+  grid-template-rows: 490px 300px;
   grid-gap: 0px;
 }
 
@@ -51,3 +39,55 @@ body {
   grid-column: 2 / span 3;
 }
 
+.designer {
+  transform: rotate(-90deg);
+  font-size: 120px;
+  grid-row: 2;
+  grid-column: 1 / span 2;
+}
+
+.h2-designer {
+  grid-row: 2 / span 3;
+  grid-column: 2;
+}
+
+.designer-text {
+  grid-row: 2 / span 3;
+  grid-column: 2;
+  margin-top: 50px;
+}
+
+.coder {
+  transform: rotate(-90deg);
+  font-size: 120px;
+  grid-row: 3;
+  grid-column: 1;
+  margin-top: 2em;
+}
+
+.h2-coder {
+  grid-row: 3 / span 4;
+  grid-column: 2;
+  margin-top: 2em
+}
+
+.coder-text {
+  grid-row: 3 / span 4;
+  grid-column: 2;
+  margin-top: 5em;
+}
+
+.name {
+  grid-row: 1;
+  grid-column: 12;
+}
+
+.website {
+  grid-row: 2;
+  grid-column: 12;
+}
+
+.grid-img-logo {
+  grid-row: 4 / span 5;
+  grid-column: 12;
+}
